fixed bug that was stretching heashot image on about page

--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,10 @@ textarea {
   justify-content: space-around;
 }
 
+.align-start {
+  align-items: flex-start;
+}
+
 .flex-end {
   justify-content: flex-end;
 }
@@ -294,6 +298,7 @@ a {
 
 .headshot {
   width: 35%;
+  max-height: auto;
   margin-right: 3%;
   box-shadow: 2px 2px 10px rgb(116 50 50 / 80%);
 }
